# swarm-sim

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  drone.md  gcs.md  proxy.md  run.sh
.github/workflows/: main-image.yml
include/common/: mavlink_helpers.hpp  net.hpp  types.hpp  udp_socket.hpp
include/drone/: mcu.hpp  physics.hpp
include/gcs/: gcs_engine.hpp  websocket.hpp
include/proxy/: proxy.hpp
src/drone/: main.cpp  physics.cpp
src/gcs/: main.cpp
src/proxy/: main.cpp  proxy.cpp
tests/common/: net_test.cpp
tests/drone/: physics_test.cpp
tests/gcs/: gcs_engine_test.cpp
tests/proxy/: proxy_test.cpp
